--- a/src/Components/card/card.styles.css
+++ b/src/Components/card/card.styles.css
@@ -7,9 +7,6 @@
   min-width: 0;
   word-wrap: break-word;
   background-color: #fff;
-  background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
   margin: 10px 0px;
 }
 
@@ -36,8 +33,7 @@
 }
 
 .CardTitle {
-  margin-bottom: 0.75rem;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 
@@ -47,7 +43,9 @@
 }
 
 .CardText {
-  font-size: 14px;
+  font-size: 12px;
+  height: 37px;
+  overflow: hidden;
 }
 
 .CardText:last-child {
@@ -257,15 +255,14 @@
 }
 
 .CardA {
-  width: 450px;
-  height: 250px;
+  height: 60px;
   background-color: #fff;
   background: linear-gradient(#f8f8f8, #fff);
   box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
-  border-radius: 6px;
+  /* border-radius: 6px; */
   overflow: hidden;
   position: relative;
-  margin: 1.5rem;
+  /* margin: 1.5rem; */
 }
 
 .CardA h1 {
@@ -274,7 +271,7 @@
 
 .CardA .Additional {
   position: absolute;
-  width: 150px;
+  width: 50px;
   height: 100%;
   background: linear-gradient(#de685e, #ee786e);
   transition: width 0.4s;
@@ -288,14 +285,26 @@
 
 .CardA:hover .Additional {
   width: 100%;
-  border-radius: 0 5px 5px 0;
 }
 
 .CardA .Additional .UserCard {
-  width: 150px;
+  width: 50px;
   height: 100%;
   position: relative;
   float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000000;
+}
+
+.CardA .Additional .UserCard span {
+  font-size: 25px;
+  font-weight: bold;
+  font-family: fantasy;
+  -webkit-text-fill-color: transparent;
+  filter: drop-shadow(1px 1px #333);
+  text-shadow: 0 1px rgba(237, 130, 130, 0.7);
 }
 
 .CardA .Additional .UserCard::after {
@@ -330,10 +339,10 @@
 }
 
 .CardA .Additional .MoreInfo {
-  width: 300px;
+  width: 88%;
   float: left;
   position: absolute;
-  left: 150px;
+  left: 56px;
   height: 100%;
 }
 
@@ -401,14 +410,14 @@
 }
 
 .CardA .General {
-  width: 300px;
+  width: 90%;
   height: 100%;
   position: absolute;
   top: 0;
   right: 0;
   z-index: 1;
   box-sizing: border-box;
-  padding: 1rem;
+  padding-left: 9px;
   padding-top: 0;
 }
 
