--- a/src/Components/card/card.styles.css
+++ b/src/Components/card/card.styles.css
@@ -6,8 +6,13 @@
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  /* background-color: #fff; */
   margin: 10px 0px;
+
+  background-color: #1d94a5;
+  border: 1px solid rgba(161, 96, 96, 0.1);
+  box-shadow: inset 0 2px 3px rgb(16, 132, 147),
+    inset 0 -2px 3px rgba(0, 0, 0, 0.3), 0 1px 1px rgb(6, 97, 110);
 }
 
 .Card > hr {
@@ -35,6 +40,15 @@
 .CardTitle {
   font-size: 14px;
   font-weight: bold;
+}
+
+.CardTitle a {
+  cursor: pointer;
+  color: #333333;
+}
+
+.CardTitle a:hover {
+  color: #333333;
 }
 
 .CardSubtitle {
@@ -273,14 +287,16 @@
   position: absolute;
   width: 50px;
   height: 100%;
-  background: linear-gradient(#de685e, #ee786e);
+  /* background: linear-gradient(#de685e, #ee786e); */
+  background: linear-gradient(#6bd8e7, #84d9e5);
   transition: width 0.4s;
   overflow: hidden;
   z-index: 2;
 }
 
 .CardA.Green .Additional {
-  background: linear-gradient(#92bca6, #a2ccb6);
+  /* background: linear-gradient(#92bca6, #a2ccb6); */
+  background: linear-gradient(#6bd8e7, #84d9e5);
 }
 
 .CardA:hover .Additional {
@@ -303,8 +319,10 @@
   font-weight: bold;
   font-family: fantasy;
   -webkit-text-fill-color: transparent;
-  filter: drop-shadow(1px 1px #333);
-  text-shadow: 0 1px rgba(237, 130, 130, 0.7);
+  /* filter: drop-shadow(1px 1px #333);
+  text-shadow: 0 1px rgba(237, 130, 130, 0.7); */
+  filter: drop-shadow(1px 1px #fff);
+  text-shadow: 0 1px rgb(25, 185, 208);
 }
 
 .CardA .Additional .UserCard::after {
@@ -314,7 +332,7 @@
   top: 10%;
   right: -2px;
   height: 80%;
-  border-left: 2px solid rgba(0, 0, 0, 0.025);
+  border-left: 2px solid rgba(0, 0, 0, 0.08);
 }
 
 .CardA .Additional .UserCard .Level,
