--- a/src/Components/advanced-search/advanced-search.styles.css
+++ b/src/Components/advanced-search/advanced-search.styles.css
@@ -1,7 +1,10 @@
 .AdvancedSearch {
+  position: relative;
   padding: 10px 10px;
   height: 100%;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -37,4 +40,26 @@
 
 .CustomSearchContainer.Show {
   max-height: 100px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+  .CustomSearchBody {
+    padding: 0px 0px;
+  }
+  .SelectContainer {
+    height: 30px;
+  }
+  .CustomSearchContainer.Show {
+    max-height: 60px;
+  }
+}
+
+@media all and (-ms-high-contrast: none) {
+  *::-ms-backdrop,
+  .AdvancedSearch {
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    display: block;
+  } /* IE11 */
 }
