--- a/src/Components/custom-button/custom-button.styles.css
+++ b/src/Components/custom-button/custom-button.styles.css
@@ -2,3 +2,9 @@
   height: 40px;
   border-radius: 0px;
 }
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+  .CustomButton {
+    height: 30px;
+  }
+}
