--- a/src/Components/elastic-search/elastic-search.styles.css
+++ b/src/Components/elastic-search/elastic-search.styles.css
@@ -31,3 +31,15 @@
 .ElasticSearchHeaderLabel {
   flex: 1;
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .ElasticSearchContainer {
+    width: 50vw;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+  .ElasticSearchContainer {
+    width: 85vw;
+  }
+}
