--- a/src/Components/input-field/search-input-field.styles.css
+++ b/src/Components/input-field/search-input-field.styles.css
@@ -15,3 +15,10 @@
 .InputField:focus {
   outline: none;
 }
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+  .InputField {
+    font-size: 14px;
+    height: 30px;
+  }
+}
