--- a/src/Components/advanced-search/advanced-search.styles.css
+++ b/src/Components/advanced-search/advanced-search.styles.css
@@ -16,7 +16,7 @@
 }
 
 .CustomSearchBody {
-  padding: 15px 0px;
+  padding: 15px 2px;
   margin-bottom: 0px;
   display: grid;
 }
@@ -36,10 +36,18 @@
   overflow: hidden;
   transition: max-height 1000ms ease-in-out;
   flex: 1;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
 .CustomSearchContainer.Show {
   max-height: 100px;
+}
+
+.PaginationCenter {
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
